--- a/JAVASCRIPT/PREATICAL TEST/index.html
+++ b/JAVASCRIPT/PREATICAL TEST/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Page</title>
-    <link rel="stylesheet" href="style5.css">
+    <link rel="stylesheet" href="style.css">
     <style>
         #container img {
             width: 100px;
@@ -45,7 +45,7 @@
 <label for="filterSelect">Filter by category:</label>
 <select id="filterSelect">
     <option value="all">All</option>
-    <option value="electronics">Electronics</option>
+    <option value="mobile">Mobile</option>
     <option value="clothing">Clothing</option>
     <option value="books">Books</option>
 </select>
